[package]
name = "bluesky-push-notifier"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.44", features = ["full"] }
bsky-sdk = "0.1.16"
atrium-api = "0.25"
atrium-repo = "0.1.0"
atrium-xrpc-client = "0.5"
a2 = "0.10"
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "postgres", "time", "uuid"] }
serde = { version = "1.0", features = ["derive"] }
time = { version = "0.3", features = ["serde-human-readable"] }
serde_json = "1.0"
thiserror = "2.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
futures = "0.3"
anyhow = "1.0"
dotenv = "0.15"
async-stream = "0.3"
uuid = { version = "1.16", features = ["v4", "serde"] }
tokio-tungstenite = { version = "0.26.2", features = ["native-tls"] }
serde_ipld_dagcbor = { version = "0.6.2", default-features = false, features = ["std"] }
ipld-core = { version = "0.4.2", default-features = false, features = ["std"] }
chrono = "0.4.40"
trait-variant = "0.1.2"
axum = "0.7"
tower-http = { version = "0.5", features = ["cors"] }
reqwest = { version = "0.12.15", features = ["json"] }